--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
   "manifest_version": 2,
   "name": "a0fefd's Brightness Adjuster",
   "version": "1.1",
+  "icons": {
+    "64": "icons/32.png"
+  },
   "description": "Changes the brightness of open site.",
   "permissions": [
     "storage",
