--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "a0fefd's Brightness Adjuster",
-  "version": "1.1",
+  "version": "1.2",
   "icons": {
     "64": "icons/32.png"
   },
@@ -23,7 +23,8 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "permissions": ["activeTab"]
+      "permissions": ["activeTab"],
+	  "run_at": "document_start"
     }
   ]
 }
